# mcp-youtube

./: .cursorrules  README.md  mcp_youtube.py  pyproject.toml
.cursor/: mcp.json
tests/: test_mcp_youtube.py
